--- a/src/Terratype/App_Plugins/Terratype/Views/config.html
+++ b/src/Terratype/App_Plugins/Terratype/Views/config.html
@@ -8,7 +8,11 @@
                 </small>
             </label>
             <div class="controls">
-                <select id="terratype_{{identifier}}_provider" ng-model="config().provider.id" class="umb-editor" ng-change="terratype.setProvider(config().provider.id)" ng-options="p.id as p.name for p in vm().providers"></select>
+                <select id="terratype_{{identifier}}_provider" ng-model="config().provider.id" class="umb-editor" ng-change="terratype.setProvider(config().provider.id)" ng-options="p.id as p.name for p in vm().providers" style="float:left;"></select>
+                <div ng-show="vm().providerLoading == true" style="float:left;margin-left:10px;">
+                    <img ng-src="{{terratype.images.loading}}" />
+                </div>
+                <div style="clear:both;"></div>
             </div>
         </div>
         <div ng-show="vm().providers.length == 0" style="color:red;">
@@ -16,12 +20,14 @@
         </div>
     </div>
     <br />
-    <fieldset ng-if="vm().provider.id" style="padding-left:15px;">
-        <a href="{{vm().provider.referenceUrl}}" target="_blank">
-            <legend ng-style="{'padding-left':'36px', 'background-image':'url(' + vm().provider.events.files.logo + ')', 'background-size': 'auto 32px', 'background-repeat': 'no-repeat'}">
-                {{vm().provider.name}}
-            </legend>
-        </a>
+    <fieldset ng-show="vm().provider.id" style="padding-left:15px;">
+        <legend>
+            <a href="{{vm().provider.referenceUrl}}" target="_blank">
+                <span ng-style="{'padding-left':'36px', 'background-image':'url(' + vm().provider.events.files.logo + ')', 'background-size': 'auto 32px', 'background-repeat': 'no-repeat', 'display':'inline-block'}">
+                    {{vm().provider.name}}
+                </span>
+            </a>
+        </legend>
         <p>{{vm().provider.description}}</p>
         <br />
         <section>
