--- a/src/Terratype.GoogleMapsV3/App_Plugins/Terratype.GoogleMapsV3/Views/config.definition.html
+++ b/src/Terratype.GoogleMapsV3/App_Plugins/Terratype.GoogleMapsV3/Views/config.definition.html
@@ -8,36 +8,36 @@
         </label>
         <div class="controls">
             <select id="terratype_{{identifier}}_googlemapv3_version" ng-model="config().provider.version" class="umb-editor" ng-change="vm().provider.events.versionChange()">
-                <option value="3" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version3"></option>
-                <option value="3.exp" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version3exp"></option>
-                <option value="3.27" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version327"></option>
-                <option value="3.26" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version326"></option>
-                <option value="3.25" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version325"></option>
-                <option value="3.24" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version324"></option>
-                <option value="3.23" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version323"></option>
-                <option value="3.22" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version322"></option>
-                <option value="3.21" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version321"></option>
-                <option value="3.20" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version320"></option>
-                <option value="3.19" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version319"></option>
-                <option value="3.18" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version318"></option>
-                <option value="3.17" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version317"></option>
-                <option value="3.16" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version316"></option>
-                <option value="3.15" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version315"></option>
-                <option value="3.14" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version314"></option>
-                <option value="3.13" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version313"></option>
-                <option value="3.12" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version312"></option>
-                <option value="3.11" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version311"></option>
-                <option value="3.10" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version310"></option>
-                <option value="3.9" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version39"></option>
-                <option value="3.8" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version38"></option>
-                <option value="3.7" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version37"></option>
-                <option value="3.6" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version36"></option>
-                <option value="3.5" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version35"></option>
-                <option value="3.4" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version34"></option>
-                <option value="3.3" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version33"></option>
-                <option value="3.2" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version32"></option>
-                <option value="3.1" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version31"></option>
-                <option value="3.0" localize="label" label="@terratypeGoogleMapsV3ConfigDefinition_version30"></option>
+                <option value="3" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version3"></option>
+                <option value="3.exp" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version3exp"></option>
+                <option value="3.27" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version327"></option>
+                <option value="3.26" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version326"></option>
+                <option value="3.25" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version325"></option>
+                <option value="3.24" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version324"></option>
+                <option value="3.23" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version323"></option>
+                <option value="3.22" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version322"></option>
+                <option value="3.21" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version321"></option>
+                <option value="3.20" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version320"></option>
+                <option value="3.19" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version319"></option>
+                <option value="3.18" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version318"></option>
+                <option value="3.17" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version317"></option>
+                <option value="3.16" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version316"></option>
+                <option value="3.15" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version315"></option>
+                <option value="3.14" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version314"></option>
+                <option value="3.13" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version313"></option>
+                <option value="3.12" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version312"></option>
+                <option value="3.11" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version311"></option>
+                <option value="3.10" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version310"></option>
+                <option value="3.9" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version39"></option>
+                <option value="3.8" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version38"></option>
+                <option value="3.7" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version37"></option>
+                <option value="3.6" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version36"></option>
+                <option value="3.5" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version35"></option>
+                <option value="3.4" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version34"></option>
+                <option value="3.3" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version33"></option>
+                <option value="3.2" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version32"></option>
+                <option value="3.1" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version31"></option>
+                <option value="3.0" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version30"></option>
             </select>
             <div ng-show="vm().provider.version">
                 <small terratype-translate="terratypeGoogleMapsV3ConfigDefinition_versionLoaded">
@@ -53,7 +53,7 @@
             </small>
         </label>
         <div class="controls">
-            <input id="terratype_{{identifier}}_googlemapv3_apikey" type="text" ng-model="config().provider.apiKey" class="umb-editor umb-textstring textstring" localize="placeholder" placeholder="@terratypeGoogleMapsV3ConfigDefinition__apiKeyPlaceholder" spellcheck=false ng-change="vm().status.reload = true" />
+            <input id="terratype_{{identifier}}_googlemapv3_apikey" type="text" ng-model="config().provider.apiKey" class="umb-editor umb-textstring textstring" localize="placeholder" placeholder="@terratypeGoogleMapsV3ConfigDefinition_apiKeyPlaceholder" spellcheck=false ng-change="vm().status.reload = true" />
             <div>
                 <div>
                     <a href="https://developers.google.com/maps/documentation/javascript/get-api-key#get-an-api-key" target="_blank" style="font-size:smaller;">
