--- a/src/Terratype.TestSite/App_Plugins/Terratype.LeafletV1/Views/config.apperance.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype.LeafletV1/Views/config.apperance.html
@@ -18,10 +18,10 @@
     </label>
     <div class="controls">
         <select id="terratype_{{identifier}}_leafletv1_zoomcontrol_position" ng-model="config().provider.zoomControl.position" class="umb-editor" ng-change="vm().provider.events.optionChange()" convert-to-number>
-            <option value="1" localize="label" label="@terratypeLeafletV1ConfigApperance_positionTopLeft"></option>
-            <option value="3" localize="label" label="@terratypeLeafletV1ConfigApperance_positionTopRight"></option>
-            <option value="10" localize="label" label="@terratypeLeafletV1ConfigApperance_positionBottomLeft"></option>
-            <option value="12" localize="label" label="@terratypeLeafletV1ConfigApperance_positionBottomRight"></option>
+            <option value="1" terratype-translate="@terratypeLeafletV1ConfigApperance_positionTopLeft"></option>
+            <option value="3" terratype-translate="@terratypeLeafletV1ConfigApperance_positionTopRight"></option>
+            <option value="10" terratype-translate="@terratypeLeafletV1ConfigApperance_positionBottomLeft"></option>
+            <option value="12" terratype-translate="@terratypeLeafletV1ConfigApperance_positionBottomRight"></option>
         </select>
     </div>
 </div>
