--- a/src/Terratype.TestSite/App_Plugins/Terratype.BingMapsV8/Views/config.apperance.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype.BingMapsV8/Views/config.apperance.html
@@ -1,8 +1,8 @@
 ﻿<div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_variety_basic" class="control-label">
-        <localize key="terratypeGoogleMapsV3ConfigApperance_basicMapLabel">Show Standard Map:</localize>
+        <localize key="terratypeBingMapsV8ConfigApperance_basicMapLabel">Standard Map:</localize>
         <small>
-            <localize key="terratypeGoogleMapsV3ConfigApperance_basicMapDescription">Do you want to see the standard map</localize>
+            <localize key="terratypeBingMapsV8ConfigApperance_basicMapDescription">Do you want to see the standard map</localize>
         </small>
     </label>
     <div class="controls">
@@ -11,9 +11,9 @@
 </div>
 <div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_variety_satallite" class="control-label">
-        <localize key="terratypeGoogleMapsV3ConfigApperance_satelliteMapLabel">Show Satellite Map:</localize>
+        <localize key="terratypeBingMapsV8ConfigApperance_satelliteMapLabel">Satellite Map:</localize>
         <small>
-            <localize key="terratypeGoogleMapsV3ConfigApperance_satelliteMapDescription">Do you want to see the satellite map</localize>
+            <localize key="terratypeBingMapsV8ConfigApperance_satelliteMapDescription">Do you want to see the satellite map</localize>
         </small>
     </label>
     <div class="controls">
@@ -21,34 +21,39 @@
     </div>
 </div>
 <div class="umb-el-wrap control-group">
-    <label for="terratype_{{identifier}}_bingmapsv8_variety_basic" class="control-label">
-        <localize key="terratypeGoogleMapsV3ConfigApperance_ordnanceSurveyMapLabel">Show Ordnance Survey Map:</localize>
-        <small>
-            <localize key="terratypeGoogleMapsV3ConfigApperance_ordnanceSurveyMapDescription">Do you want to see the Ordnance Survey map</localize>
-        </small>
-    </label>
-    <div class="controls">
-        <input id="terratype_{{identifier}}_bingmapsv8_variety_satellite" type="checkbox" ng-model="config().provider.variety.ordnanceSurvey" ng-change="vm().provider.events.optionChange()" ng-disabled="config().provider.variety.basic == false && config().provider.variety.terrain == false" />
-    </div>
-</div>
-<div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_variety_streetview" class="control-label">
-        <localize key="terratypeGoogleMapsV3ConfigApperance_streetViewMapLabel">Show Street View:</localize>
+        <localize key="terratypeBingMapsV8ConfigApperance_streetViewMapLabel">Street View:</localize>
         <small>
-            <localize key="terratypeGoogleMapsV3ConfigApperance_streetViewDescription">Do you want to see the Street View mode</localize>
+            <localize key="terratypeBingMapsV8ConfigApperance_streetViewDescription">Do you want to see the Street View mode</localize>
         </small>
     </label>
     <div class="controls">
         <input id="terratype_{{identifier}}_bingmapsv8_variety_streetview" type="checkbox" ng-model="config().provider.variety.streetView" ng-change="vm().provider.events.optionChange()" ng-disabled="config().provider.variety.basic == false && config().provider.variety.terrain == false" />
     </div>
 </div>
-
+<div class="umb-el-wrap control-group" ng-show="config().provider.variety.basic == true">
+    <label for="terratype_{{identifier}}_bingmapsv8_style" class="control-label">
+        <localize key="terratypeBingMapsV8ConfigApperance_stylingLabel">Styling:</localize>
+        <small>
+            <localize key="terratypeBingMapsV8ConfigApperance_stylingDescription">Predefined map styles</localize>
+        </small>
+    </label>
+    <div class="controls">
+        <select id="terratype_{{identifier}}_bingmapsv8_style" ng-model="config().provider.predefineStyling" class="umb-editor" ng-change="vm().provider.events.styleChange()">
+            <option value="road" terratype-translate="terratypeBingMapsV8ConfigApperance_stylingStandard"></option>
+            <option value="canvasDark" terratype-translate="@terratypeBingMapsV8ConfigApperance_stylingDark"></option>
+            <option value="canvasLight" terratype-translate="@terratypeBingMapsV8ConfigApperance_stylingLight"></option>
+            <option value="grayscale" terratype-translate="@terratypeBingMapsV8ConfigApperance_stylingGrayScale"></option>
+            <option value="ordnanceSurvey" terratype-translate="@terratypeBingMapsV8ConfigApperance_stylingOrdnanceSurvey"></option>
+        </select>
+    </div>
+</div>
 
 <div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_breadcrumb_enable" class="control-label">
-        <localize key="terratypeGoogleMapsV3ConfigApperance_breadcrumbLabel">Show Breadcrumb:</localize>
+        <localize key="terratypeBingMapsV8ConfigApperance_breadcrumbLabel">Show Breadcrumb:</localize>
         <small>
-            <localize key="terratypeGoogleMapsV3ConfigApperance_breadcrumbDescription">Display the current center location’s geography hierarchy over the top of the map. For example, if the location center is Seattle, the breadcrumb control displays 'World . United States . WA'</localize>
+            <localize key="terratypeBingMapsV8ConfigApperance_breadcrumbDescription">Display the current center location’s geography hierarchy over the top of the map. For example, if the location center is Seattle, the breadcrumb control displays 'World . United States . WA'</localize>
         </small>
     </label>
     <div class="controls">
@@ -58,21 +63,21 @@
 
 <div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_dashboard_enable" class="control-label">
-        <localize key="terratypeGoogleMapsV3ConfigApperance_dashboardLabel">Show Navigation Control:</localize>
+        <localize key="terratypeBingMapsV8ConfigApperance_dashboardLabel">Show Navigation Control:</localize>
         <small>
-            <localize key="terratypeGoogleMapsV3ConfigApperance_dashboardDescription">The current center location’s geography hierarchy. For example, if the location center is Seattle, the breadcrumb control displays “World . United States . WA”</localize>
+            <localize key="terratypeBingMapsV8ConfigApperance_dashboardDescription">The current center location’s geography hierarchy. For example, if the location center is Seattle, the breadcrumb control displays “World . United States . WA”</localize>
         </small>
     </label>
     <div class="controls">
-        <input id="terratype_{{identifier}}_bingmapsv8_breadcrumb_enable" type="checkbox" ng-model="config().provider.breadcrumb.enable" ng-change="vm().provider.events.optionChange()" />
+        <input id="terratype_{{identifier}}_bingmapsv8_dashboard_enable" type="checkbox" ng-model="config().provider.dashboard.enable" ng-change="vm().provider.events.optionChange()" />
     </div>
 </div>
 
 <div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_scale_enable" class="control-label">
-        <localize key="terratypeGoogleMapsV3ConfigApperance_scaleLabel">Scale:</localize>
+        <localize key="terratypeBingMapsV8ConfigApperance_scaleLabel">Scale:</localize>
         <small>
-            <localize key="terratypeGoogleMapsV3ConfigApperance_scaleDescription">Allow the map to show the current scale being used</localize>
+            <localize key="terratypeBingMapsV8ConfigApperance_scaleDescription">Allow the map to show the current scale being used</localize>
         </small>
     </label>
     <div class="controls">
@@ -82,9 +87,9 @@
 
 <div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_showlabels" class="control-label">
-        <localize key="terratypeGoogleMapsV3ConfigApperance_labelsLabel">Show Labels:</localize>
+        <localize key="terratypeBingMapsV8ConfigApperance_labelsLabel">Show Labels:</localize>
         <small>
-            <localize key="terratypeGoogleMapsV3ConfigApperance_labelsDescription">Do you want labels (names of countries, regions, areas, etc) to appear on the map</localize>
+            <localize key="terratypeBingMapsV8ConfigApperance_labelsDescription">Do you want labels (names of countries, regions, areas, etc) to appear on the map</localize>
         </small>
     </label>
     <div class="controls">
@@ -93,9 +98,9 @@
 </div>
 <div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_defaultlocation" class="control-label">
-        <localize key="terratypeGoogleMapsV3ConfigApperance_positionLabel">Default location:</localize>
+        <localize key="terratypeBingMapsV8ConfigApperance_positionLabel">Default location:</localize>
         <small>
-            <localize key="terratypeGoogleMapsV3ConfigApperance_positionDescription">Select the default location when displaying this map to a content editor</localize>
+            <localize key="terratypeBingMapsV8ConfigApperance_positionDescription">Select the default location when displaying this map to a content editor</localize>
         </small>
     </label>
     <div class="controls">
