--- a/src/Terratype.TestSite/App_Plugins/Terratype.BingMapsV8/Views/config.apperance.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype.BingMapsV8/Views/config.apperance.html
@@ -45,6 +45,13 @@
             <option value="canvasLight" terratype-translate="@terratypeBingMapsV8ConfigApperance_stylingLight"></option>
             <option value="grayscale" terratype-translate="@terratypeBingMapsV8ConfigApperance_stylingGrayScale"></option>
             <option value="ordnanceSurvey" terratype-translate="@terratypeBingMapsV8ConfigApperance_stylingOrdnanceSurvey"></option>
+            <option value="roadVector1">roadVector1</option>
+            <option value="roadVector2">roadVector1</option>
+            <option value="seasonal">seasonal</option>
+            <option value="symbolicNight">symbolicNight</option>
+            <option value="symbolicWinter">symbolicWinter</option>
+            <option value="highContrast">highContrast</option>
+            <option value="NGT">ngt</option>
         </select>
     </div>
 </div>
