--- a/src/Terratype.BingMapsV8/App_Plugins/Terratype.BingMapsV8/Views/editor.apperance.html
+++ b/src/Terratype.BingMapsV8/App_Plugins/Terratype.BingMapsV8/Views/editor.apperance.html
@@ -15,9 +15,12 @@
         <span style="color:red;padding-right:10px;"><localize key="terratypeBingMapsV8EditorApperance_statusDuplicate"></localize></span>
     </div>
     <div ng-if="vm().status.success" class="umb-editor">
-        <div>
-            <div ng-show="store().search.enable != 0 && config().search.enable != 0">
-                <input id="terratype_{{identifier}}_bingmapsv8_lookup" class="umb-editor umb-textstring textstring" type="text" localize="placeholder" placeholder="@terratypeBingMapsV8EditorApperance_searchPlaceholder" ng-model="store().lookup" spellcheck=false style="z-index:9998 !important;">
+        <div ng-if="store().search.enable != 0">
+            <div ng-show="config().search.enable == 1">
+                <input id="terratype_{{identifier}}_bingmapsv8_lookup_normal" class="umb-editor umb-textstring textstring" type="text" localize="placeholder" placeholder="@terratypeBingMapsV8EditorApperance_searchPlaceholder" ng-model="store().lookup" spellcheck=false style="z-index:9998 !important;">
+            </div>
+            <div ng-show="config().search.enable == 2">
+                <input id="terratype_{{identifier}}_bingmapsv8_lookup_autosuggest" class="umb-editor umb-textstring textstring" type="text" localize="placeholder" placeholder="@terratypeBingMapsV8EditorApperance_searchPlaceholder" ng-model="store().lookup" spellcheck=false style="z-index:9998 !important;" terratype-ignore-enter-key>
                 <style ng-bind-html="'.terratype_' + identifier + '_bingmapsv8_lookup_results {position:static!important;}'">
                 </style>
                 <div id="terratype_{{identifier}}_bingmapsv8_lookup_results" style="position:absolute;z-index:9999 !important"></div>
@@ -35,7 +38,7 @@
         </div>
         <div style="margin-top:-15px;">
             <div>
-                <input type="text" id="terratype_{{identifier}}_bingmapsv8_location" class="umb-editor umb-textstring textstring" localize="placeholder" placeholder="@terratypeBingMapsV8EditorApperance_locationPlaceholder" ng-model="vm().position.datumText" ng-change="vm().provider.events.datumChange(vm().position.datumText)" ng-style="vm().position.datumStyle" />
+                <input type="text" id="terratype_{{identifier}}_bingmapsv8_location" class="umb-editor umb-textstring textstring" localize="placeholder" placeholder="@terratypeBingMapsV8EditorApperance_locationPlaceholder" ng-model="vm().position.datumText" ng-change="vm().provider.events.datumChange(vm().position.datumText)" ng-style="vm().position.datumStyle" terratype-ignore-enter-key />
             </div>
         </div>
     </div>
