--- a/src/Terratype.TestSite/App_Plugins/Terratype.GoogleMapsV3/Views/config.definition.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype.GoogleMapsV3/Views/config.definition.html
@@ -53,7 +53,10 @@
             </small>
         </label>
         <div class="controls">
-            <input id="terratype_{{identifier}}_googlemapv3_apikey" type="text" ng-model="config().provider.apiKey" class="umb-editor umb-textstring textstring" localize="placeholder" placeholder="@terratypeGoogleMapsV3ConfigDefinition_apiKeyPlaceholder" spellcheck=false ng-change="vm().status.reload = true" />
+            <input id="terratype_{{identifier}}_googlemapv3_apikey" list="terratype_{{identifier}}_googlemapv3_apikeys" type="text" ng-model="config().provider.apiKey" class="umb-editor umb-textstring textstring" localize="placeholder" placeholder="@terratypeGoogleMapsV3ConfigDefinition_apiKeyPlaceholder" spellcheck="false" ng-change="vm().status.reload = true" autocomplete="off" />
+            <datalist id="terratype_{{identifier}}_googlemapv3_apikeys">
+                <option ng-repeat="x in vm().provider.events.httpCalls.apiKey.values" value="{{x}}"></option>
+            </datalist>
             <div>
                 <div>
                     <a href="https://developers.google.com/maps/documentation/javascript/get-api-key#get-an-api-key" target="_blank" style="font-size:smaller;">
