--- a/src/Terratype.TestSite/Views/Single1.cshtml
+++ b/src/Terratype.TestSite/Views/Single1.cshtml
@@ -12,7 +12,7 @@
                 crossorigin="anonymous"></script>
         jquery = true;
     }
-
+    var a = new Terratype.TestSite.App_Start.TestProvider();
 }
 
 <html>
